--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
 				<groupId>org.pitest</groupId>
 				<artifactId>pitest-maven</artifactId>
 				<version>1.9.0</version>
+				<configuration>
+					<targetClasses>
+						<param>com.example.pitestExample*</param>
+					</targetClasses>
+					<targetTests>
+						<param>com.example.pitestExample*</param>
+					</targetTests>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
